[project]
name = "comfyui-ux-nodes"
description = "Nodes: Easy Resolution Picker, Save Diffusion Model, Load Checkpoint BNB On the fly, Load UNET BNB On the fly"
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Anibaaal/ComfyUI-UX-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "anibaaal"
DisplayName = "ComfyUI-UX-Nodes"
Icon = ""
