[project]
name = "comfyui-ux-nodes"
description = "Nodes: Easy Resolution Picker, Model Merge SD3 Large, Flux Block Weight String, Load Checkpoint BNB On the fly, Load UNET BNB On the fly"
version = "1.0.5"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Anibaaal/ComfyUI-UX-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "anibaaal"
DisplayName = "ComfyUI-UX-Nodes"
Icon = ""
