[project]
name = "comfyui-ux-nodes"
description = "Nodes: Easy Resolution Picker, GPU Blur Image, Solid Color Image, Lerp Float"
version = "1.0.6"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Anibaaal/ComfyUI-UX-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "anibaaal"
DisplayName = "ComfyUI-UX-Nodes"
Icon = ""
